kubernetes/apps/base/jellyfin/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
