kubernetes/apps/base/jellyfin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - jellyfin.lab.petebeegle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: jellyfin
          port: 8096
          weight: 1
